# sockets

./: .gitignore
tcp/: CMakeLists.txt
tcp/src/: CMakeLists.txt  tcp_client.c  tcp_server.c
udp/: CMakeLists.txt
udp/src/: CMakeLists.txt  udp_client.c  udp_server.c
